CI: Windows compilation time

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -54,7 +54,8 @@ jobs:
           export PATH=$PATH:$HOME/d/protoc/bin
           unset RUSTFLAGS
           echo $RUSTFLAGS
-          cargo test --lib --tests --bins --features avro,json,backtrace --profile=release-windows
+          rustup show
+          cargo test --lib --tests --bins --features avro,json,backtrace --profile=release-windows --target x86_64-pc-windows-msvc
           cd datafusion-cli
-          cargo test --lib --tests --bins --all-features --profile=release-windows
+          cargo test --lib --tests --bins --all-features --profile=release-windows --target x86_64-pc-windows-msvc
 
