CI: Windows compilation time

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -54,6 +54,7 @@ jobs:
           export PATH=$PATH:$HOME/d/protoc/bin
           unset RUSTFLAGS
           RUSTFLAGS=-Clink-arg=-fuse-ld
+          lld-link --version
           echo $RUSTFLAGS
           rustup show
           cargo test --lib --tests --bins --features avro,json,backtrace --profile=release-windows --target x86_64-pc-windows-msvc
