--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -53,7 +53,7 @@ jobs:
         run: |
           export PATH=$PATH:$HOME/d/protoc/bin
           unset RUSTFLAGS
-          RUSTFLAGS=-Clink-arg=-fuse-ld
+          RUSTFLAGS="-C link-arg=-fuse-ld=lld -C target-cpu=native"
           lld-link --version
           echo $RUSTFLAGS
           rustup show
