CI: Windows compilation time

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -177,6 +177,11 @@ lto = true
 opt-level = 1
 incremental = false
 
+[profile.release-windows.build-override]
+opt-level = 0
+codegen-units = 256
+debug = false
+
 [workspace.lints.clippy]
 # Detects large stack-allocated futures that may cause stack overflow crashes (see threshold in clippy.toml)
 large_futures = "warn"
