Simplify type signatures using `TypeSignatureClass` for mixed type function signature (#13372)
* add type sig class

Signed-off-by: jayzhan211 <jayzhan211@gmail.com>

* timestamp

Signed-off-by: jayzhan211 <jayzhan211@gmail.com>

* date part

Signed-off-by: jayzhan211 <jayzhan211@gmail.com>

* fmt

Signed-off-by: jayzhan211 <jayzhan211@gmail.com>

* taplo format

Signed-off-by: jayzhan211 <jayzhan211@gmail.com>

* tpch test

Signed-off-by: jayzhan211 <jayzhan211@gmail.com>

* msrc issue

Signed-off-by: jayzhan211 <jayzhan211@gmail.com>

* msrc issue

Signed-off-by: jayzhan211 <jayzhan211@gmail.com>

* explicit hash

Signed-off-by: jayzhan211 <jayzhan211@gmail.com>

* Enhance type coercion and function signatures

- Added logic to prevent unnecessary casting of string types in `native.rs`.
- Introduced `Comparable` variant in `TypeSignature` to define coercion rules for comparisons.
- Updated imports in `functions.rs` and `signature.rs` for better organization.
- Modified `date_part.rs` to improve handling of timestamp extraction and fixed query tests in `expr.slt`.
- Added `datafusion-macros` dependency in `Cargo.toml` and `Cargo.lock`.

These changes improve type handling and ensure more accurate function behavior in SQL expressions.

* fix comment

Signed-off-by: Jay Zhan <jayzhan211@gmail.com>

* fix signature

Signed-off-by: Jay Zhan <jayzhan211@gmail.com>

* fix test

Signed-off-by: Jay Zhan <jayzhan211@gmail.com>

* Enhance type coercion for timestamps to allow implicit casting from strings. Update SQL logic tests to reflect changes in timestamp handling, including expected outputs for queries involving nanoseconds and seconds.

* Refactor type coercion logic for timestamps to improve readability and maintainability. Update the `TypeSignatureClass` documentation to clarify its purpose in function signatures, particularly regarding coercible types. This change enhances the handling of implicit casting from strings to timestamps.

* Fix SQL logic tests to correc

--- a/datafusion/functions/Cargo.toml
+++ b/datafusion/functions/Cargo.toml
@@ -75,6 +75,7 @@ datafusion-common = { workspace = true }
 datafusion-doc = { workspace = true }
 datafusion-execution = { workspace = true }
 datafusion-expr = { workspace = true }
+datafusion-expr-common = { workspace = true }
 datafusion-macros = { workspace = true }
 hashbrown = { workspace = true, optional = true }
 hex = { version = "0.4", optional = true }
