--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -54,10 +54,10 @@ jobs:
           export PATH=$PATH:$HOME/d/protoc/bin
           unset RUSTFLAGS
           lld-link --version
-          export RUSTFLAGS="-C link-arg=-fuse-ld=lld"
+          export RUSTFLAGS="-C link-arg=-fuse-ld=lld -C target-cpu=native"
           echo $RUSTFLAGS
           rustup show
           cargo test --lib --tests --bins --features avro,json,backtrace --profile=release-windows
           cd datafusion-cli
-          cargo test --lib --tests --bins --all-features --profile=release-windows
+          cargo test --lib --tests --bins --all-features
 
