--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -54,6 +54,7 @@ jobs:
           export PATH=$PATH:$HOME/d/protoc/bin
           unset RUSTFLAGS
           lld-link --version
+          echo $RUSTFLAGS
           export RUSTFLAGS=$RUSTFLAGS"-C link-arg=-fuse-ld=lld -C target-cpu=native"
           echo $RUSTFLAGS
           rustup show
