adding scripts and bin

--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -49,6 +49,7 @@ snmalloc-rs = { version = "0.3", optional = true }
 structopt = { version = "0.3", default-features = false }
 test-utils = { path = "../test-utils/", version = "0.1.0" }
 tokio = { workspace = true, features = ["rt-multi-thread", "parking_lot"] }
+duckdb = "1.1.1"
 
 [dev-dependencies]
 datafusion-proto = { workspace = true }
