feat: `parse_float_as_decimal` supports scientific notation and Decimal256

--- a/datafusion/sql/Cargo.toml
+++ b/datafusion/sql/Cargo.toml
@@ -51,6 +51,7 @@ log = { workspace = true }
 recursive = { workspace = true }
 regex = { workspace = true }
 sqlparser = { workspace = true }
+bigdecimal = { workspace = true }
 
 [dev-dependencies]
 ctor = { workspace = true }
