--- a/datafusion/sql/Cargo.toml
+++ b/datafusion/sql/Cargo.toml
@@ -39,7 +39,7 @@ path = "src/lib.rs"
 default = ["unicode_expressions", "unparser", "recursive-protection"]
 unicode_expressions = []
 unparser = []
-recursive-protection = ["recursive"]
+recursive-protection = ["dep:recursive"]
 
 [dependencies]
 arrow = { workspace = true }
@@ -49,7 +49,7 @@ datafusion-common = { workspace = true, default-features = true }
 datafusion-expr = { workspace = true }
 indexmap = { workspace = true }
 log = { workspace = true }
-recursive = { version = "0.1.1", optional = true }
+recursive = { workspace = true, optional = true }
 regex = { workspace = true }
 sqlparser = { workspace = true }
 
