--- a/datafusion/substrait/Cargo.toml
+++ b/datafusion/substrait/Cargo.toml
@@ -46,8 +46,10 @@ substrait = { version = "0.50", features = ["serde"] }
 url = { workspace = true }
 
 [dev-dependencies]
-datafusion = { workspace = true, features = ["nested_expressions"] }
+datafusion = { workspace = true, features = ["nested_expressions", "serde"] }
 datafusion-functions-aggregate = { workspace = true }
+datafusion-proto = { workspace = true, features = ["json"] }
+datafusion-proto-common = { workspace = true, features = ["json"] }
 serde_json = "1.0"
 tokio = { workspace = true }
 
