--- a/datafusion/core/Cargo.toml
+++ b/datafusion/core/Cargo.toml
@@ -69,12 +69,12 @@ pyarrow = ["datafusion-common/pyarrow", "parquet"]
 regex_expressions = [
     "datafusion-functions/regex_expressions",
 ]
-recusive-protection = [
-    "datafusion-common/recursive-protection",
-    "datafusion-expr/recursive-protection",
-    "datafusion-optimizer/recursive-protection",
-    "datafusion-physical-optimizer/recursive-protection",
-    "datafusion-sql/recursive-protection"
+recursive_protection = [
+    "datafusion-common/recursive_protection",
+    "datafusion-expr/recursive_protection",
+    "datafusion-optimizer/recursive_protection",
+    "datafusion-physical-optimizer/recursive_protection",
+    "datafusion-sql/recursive_protection"
 ]
 serde = ["arrow-schema/serde"]
 string_expressions = ["datafusion-functions/string_expressions"]
