--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,22 +71,22 @@ version = "43.0.0"
 ahash = { version = "0.8", default-features = false, features = [
     "runtime-rng",
 ] }
-arrow = { version = "53.2.0", features = [
+arrow = { git = "https://github.com/influxdata/arrow-rs", rev = "aa8c048", features = [
     "prettyprint",
 ] }
-arrow-array = { version = "53.2.0", default-features = false, features = [
+arrow-array = { git = "https://github.com/influxdata/arrow-rs", rev = "aa8c048", default-features = false, features = [
     "chrono-tz",
 ] }
-arrow-buffer = { version = "53.2.0", default-features = false }
-arrow-flight = { version = "53.2.0", features = [
+arrow-buffer = { git = "https://github.com/influxdata/arrow-rs", rev = "aa8c048", default-features = false }
+arrow-flight = { git = "https://github.com/influxdata/arrow-rs", rev = "aa8c048", features = [
     "flight-sql-experimental",
 ] }
-arrow-ipc = { version = "53.2.0", default-features = false, features = [
+arrow-ipc = { git = "https://github.com/influxdata/arrow-rs", rev = "aa8c048", default-features = false, features = [
     "lz4",
 ] }
-arrow-ord = { version = "53.2.0", default-features = false }
-arrow-schema = { version = "53.2.0", default-features = false }
-arrow-string = { version = "53.2.0", default-features = false }
+arrow-ord = { git = "https://github.com/influxdata/arrow-rs", rev = "aa8c048", default-features = false }
+arrow-schema = { git = "https://github.com/influxdata/arrow-rs", rev = "aa8c048", default-features = false }
+arrow-string = { git = "https://github.com/influxdata/arrow-rs", rev = "aa8c048", default-features = false }
 async-trait = "0.1.73"
 bigdecimal = "=0.4.1"
 bytes = "1.4"
@@ -128,15 +128,15 @@ log = "^0.4"
 num_cpus = "1.13.0"
 object_store = { version = "0.11.0", default-features = false }
 parking_lot = "0.12"
-parquet = { version = "53.2.0", default-features = false, features = [
+parquet = { git = "https://github.com/influxdata/arrow-rs", rev = "aa8c048", default-features = false, features = [
     "arrow",
     "async",
     "object_store",
 ] }
 pbjson = { version = "0.7.0" }
 # Should match arrow-flight's version of prost.
-prost = "0.13.1"
-prost-derive = "0.13.1"
+prost = "0.12.3"
+prost-derive = "0.12.3"
 rand = "0.8"
 regex = "1.8"
 rstest = "0.23.0"
