ci improvements, update protoc (#13876)
* Fix md5 return_type to only return Utf8 as per current code impl.

* ci improvements

* Lock taiki-e/install-action to a githash for apache action policy - Release 2.46.19 in the case of this hash.

* Lock taiki-e/install-action to a githash for apache action policy - Release 2.46.19 in the case of this hash.

* Revert nextest change until action is approved.

* Exclude requires workspace

* Fixing minor typo to verify ci caching of builds is working as expected.

* Updates from PR review.

* Adding issue link for disabling intel mac build

* improve performance of running examples

* remove cargo check

--- a/datafusion-cli/Cargo.toml
+++ b/datafusion-cli/Cargo.toml
@@ -70,3 +70,14 @@ assert_cmd = "2.0"
 ctor = "0.2.0"
 predicates = "3.0"
 rstest = "0.22"
+
+[profile.ci]
+inherits = "dev"
+incremental = false
+
+# ci turns off debug info, etc for dependencies to allow for smaller binaries making caching more effective
+[profile.ci.package."*"]
+debug = false
+debug-assertions = false
+strip = "debuginfo"
+incremental = false
