--- a/datafusion/core/Cargo.toml
+++ b/datafusion/core/Cargo.toml
@@ -27,10 +27,7 @@ homepage = { workspace = true }
 repository = { workspace = true }
 license = { workspace = true }
 authors = { workspace = true }
-# Specify MSRV here as `cargo msrv` doesn't support workspace version and fails with
-# "Unable to find key 'package.rust-version' (or 'package.metadata.msrv') in 'arrow-datafusion/Cargo.toml'"
-# https://github.com/foresterre/cargo-msrv/issues/590
-rust-version = "1.80.1"
+rust-version = { workspace = true }
 
 [lints]
 workspace = true
