--- a/datafusion/proto/Cargo.toml
+++ b/datafusion/proto/Cargo.toml
@@ -26,8 +26,7 @@ homepage = { workspace = true }
 repository = { workspace = true }
 license = { workspace = true }
 authors = { workspace = true }
-# Specify MSRV here as `cargo msrv` doesn't support workspace version
-rust-version = "1.80.1"
+rust-version = { workspace = true }
 
 # Exclude proto files so crates.io consumers don't need protoc
 exclude = ["*.proto"]
