--- a/datafusion/functions/Cargo.toml
+++ b/datafusion/functions/Cargo.toml
@@ -206,6 +206,11 @@ required-features = ["unicode_expressions"]
 
 [[bench]]
 harness = false
+name = "reverse"
+required-features = ["unicode_expressions"]
+
+[[bench]]
+harness = false
 name = "trunc"
 required-features = ["math_expressions"]
 
