--- a/datafusion/sql/Cargo.toml
+++ b/datafusion/sql/Cargo.toml
@@ -56,6 +56,7 @@ sqlparser = { workspace = true }
 
 [dev-dependencies]
 ctor = { workspace = true }
+datafusion-optimizer = { workspace = true }
 datafusion-functions = { workspace = true, default-features = true }
 datafusion-functions-aggregate = { workspace = true }
 datafusion-functions-nested = { workspace = true }
