--- a/datafusion/sql/Cargo.toml
+++ b/datafusion/sql/Cargo.toml
@@ -56,11 +56,11 @@ sqlparser = { workspace = true }
 
 [dev-dependencies]
 ctor = { workspace = true }
-datafusion-optimizer = { workspace = true }
 datafusion-functions = { workspace = true, default-features = true }
 datafusion-functions-aggregate = { workspace = true }
 datafusion-functions-nested = { workspace = true }
 datafusion-functions-window = { workspace = true }
+datafusion-optimizer.workspace = true
 env_logger = { workspace = true }
 paste = "^1.0"
 rstest = { workspace = true }
