Improve performance of `find_in_set` function (#14020)
* Improve performance of 'find_in_set' function

Signed-off-by: Tai Le Manh <manhtai.lmt@gmail.com>

* Remove clippy warnings

* Support scalar args for 'find_in_set' function

Signed-off-by: Tai Le Manh <manhtai.lmt@gmail.com>

---------

Signed-off-by: Tai Le Manh <manhtai.lmt@gmail.com>

--- a/datafusion/functions/Cargo.toml
+++ b/datafusion/functions/Cargo.toml
@@ -218,3 +218,8 @@ required-features = ["math_expressions"]
 harness = false
 name = "initcap"
 required-features = ["unicode_expressions"]
+
+[[bench]]
+harness = false
+name = "find_in_set"
+required-features = ["unicode_expressions"]
