chore: move `SanityChecker` into `physical-optimizer` crate (#14083)
* chore: move  into  crate

* chore: move SanityChecker tests out to datafusion/core/tests

* chore: update datafusion-cli/Cargo.lock

* fix cargo doc

---------

Co-authored-by: Andrew Lamb <andrew@nerdnetworks.org>

--- a/datafusion/physical-optimizer/Cargo.toml
+++ b/datafusion/physical-optimizer/Cargo.toml
@@ -36,10 +36,14 @@ recursive_protection = ["dep:recursive"]
 
 [dependencies]
 arrow = { workspace = true }
+arrow-schema = { workspace = true }
 datafusion-common = { workspace = true, default-features = true }
 datafusion-execution = { workspace = true }
+datafusion-expr = { workspace = true }
 datafusion-expr-common = { workspace = true, default-features = true }
+datafusion-functions-aggregate = { workspace = true }
 datafusion-physical-expr = { workspace = true }
+datafusion-physical-expr-common = { workspace = true }
 datafusion-physical-plan = { workspace = true }
 futures = { workspace = true }
 itertools = { workspace = true }
