--- a/datafusion/physical-plan/Cargo.toml
+++ b/datafusion/physical-plan/Cargo.toml
@@ -32,6 +32,7 @@ rust-version = { workspace = true }
 workspace = true
 
 [features]
+default = ["compress"]
 force_hash_collisions = []
 compress = ["flate2"]
 
